--- a/files/nginx.app.conf
+++ b/files/nginx.app.conf
@@ -1,6 +1,6 @@
 server {
     listen       80;
-    server_name  domain www.domain;
+    server_name  domain;
 
     access_log  /data/logs/domain/access.log main;
     error_log  /data/logs/domain/error.log;
