--- a/files/nginx.app.conf
+++ b/files/nginx.app.conf
@@ -6,6 +6,7 @@ server {
     error_log  /data/logs/domain/error.log;
     location / {
         index  index.html index.htm index;
+        proxy_set_header Host $host;
         proxy_pass http://localhost:3000;
         proxy_connect_timeout 180; #nginx跟后端服务器连接超时时间(代理连接超时)
         proxy_send_timeout 180; #后端服务器数据回传时间(代理发送超时)
