--- a/files/nginx.app.conf
+++ b/files/nginx.app.conf
@@ -6,10 +6,15 @@ server {
     error_log  /data/logs/domain/error.log;
     location / {
         index  index.html index.htm index;
+        
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade; # websocket
+        proxy_set_header Connection "upgrade"; # websocket
         proxy_set_header Host $host;
         proxy_pass http://localhost:3000;
-        proxy_connect_timeout 180; #nginx跟后端服务器连接超时时间(代理连接超时)
-        proxy_send_timeout 180; #后端服务器数据回传时间(代理发送超时)
-        proxy_read_timeout 180; #连接成功后，后端服务器响应时间(代理接收超时)
+        proxy_connect_timeout 1000; #nginx跟后端服务器连接超时时间(代理连接超时)
+        proxy_send_timeout 1500; #后端服务器数据回传时间(代理发送超时)
+        proxy_read_timeout 2000; #连接成功后，后端服务器响应时间(代理接收超时)
+
     }
 }
